--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -71,6 +71,10 @@
             android:name="com.insidion.prspct.NewNewsItemActivity"
             android:label="@string/title_activity_new_news_item" >
         </activity>
+        <activity
+            android:name="com.insidion.prspct.SingleNewsItemActivity"
+            android:label="@string/title_activity_single_news_item" >
+        </activity>
     </application>
 
 </manifest>
